<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#E6000000"
        android:gravity="center|left"
        android:paddingStart="24dp"
        tools:ignore="RtlHardcoded,RtlSymmetry">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/openAlbomMain"
            android:layout_width="30dp"
            android:layout_height="28dp"
            android:background="@drawable/ic_music_albom"
            android:gravity="center"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/actionBarTextMain"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginRight="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#80000000"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/currentMusicMain"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:clickable="true"
            android:background="#CC000000"
            android:padding="8dp"
            tools:ignore="NestedWeights"
            android:focusable="true">

            <ImageView
                android:id="@+id/imageMusicCurrentMain"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:clickable="false"
                android:src="@drawable/music_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/background_image"
                android:clickable="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/musicNameMain"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:maxLength="35"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:scrollHorizontally="true"
                android:textColor="@color/currentItemColor"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/artistNameMain"
                app:layout_constraintLeft_toRightOf="@id/imageMusicCurrentMain"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread"
                android:text="@string/none"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/artistNameMain"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:clickable="false"
                android:maxLength="35"
                android:paddingStart="12dp"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:textColor="@color/colorHidden"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/btnPlayMusicMain"
                app:layout_constraintLeft_toRightOf="@id/imageMusicCurrentMain"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/musicNameMain"
                android:text="@string/none"
                tools:ignore="RtlSymmetry" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnFavoureteMain"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_favorite"
                app:layout_constraintBottom_toBottomOf="@id/btnPlayMusicMain"
                app:layout_constraintLeft_toRightOf="@id/imageMusicCurrentMain"
                app:layout_constraintTop_toTopOf="@id/btnPlayMusicMain"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPlayMusicMain"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_play"
                android:backgroundTint="@color/currentItemColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/btnPreviousMain"
                app:layout_constraintRight_toLeftOf="@id/btnNextMusicMain"
                app:layout_constraintTop_toBottomOf="@id/artistNameMain"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNextMusicMain"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/ic_next_play"
                android:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/btnPlayMusicMain"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/artistNameMain"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPreviousMain"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/ic_previous_play"
                android:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/btnFavoureteMain"
                app:layout_constraintRight_toLeftOf="@id/btnPlayMusicMain"
                app:layout_constraintTop_toBottomOf="@id/artistNameMain"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listMusicMain"
            android:background="@drawable/stroke_list"
            android:paddingLeft="4dp"
            android:paddingTop="4dp"
            android:paddingRight="4dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            tools:listitem="@layout/item_music" />
    </LinearLayout>
</LinearLayout>